--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <script src="firebase.js"></script>
     </head>
     <body>
-        <h2>Mini Telegraph demo!</h2>
+        <h2>Mini Telegraph demo!!</h2>
     </body>
 </html>
