--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-                <span id="info" >v004 </span>
+                <span id="info" >v005 </span>
                 <center><h1>Mini Telegraph</h1></center>
                 <center><h3><i>/* Демонстрация */</i></h3></center>
                 <!--<p>Добро пожаловать!-->
@@ -22,7 +22,9 @@
                     <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>
                 </div>
                 <br>
-                <input id="textbox" type="text"><button id="button_send" onclick="clickSend();">OK</button>
+                <input id="textbox" oninput="onType();" maxlength="20" type="text">
+                <span id='text_limit'>&nbsp;0/20</span>
+                <button id="button_send" onclick="clickSend();">OK</button>
         </div>
 
         <script src="firebase.js"></script>
