--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
                 <center><h1>Mini Telegraph</h1></center>
                 <center><h3><i>/* Демонстрация */</i></h3></center>
                 <!--<p>Добро пожаловать!-->
+                <!-- Наверняка кто-то полез скмотреть код -->
                 <p>Напишите что-нибудь, и это будет напечатано.
                 <p>Ограничение по длине &mdash; 20 символов.
                 <p>Интервал между сообщениями  &mdash; не менее 30 секунд.
                 <p>
                 <div id="history">
+                    <!--
                     <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>
                     <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>
                     <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>
                     <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>
-                    <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>
+                    <div class="message_box"><span class="time">12:43</span>&#9993; <span class="message">What hath God wrought?</span></div>-->
                 </div>
-                <br>
+                <br><center>
                 <input id="textbox" oninput="onType();" maxlength="20" type="text">
-                <span id='text_limit'>&nbsp;0/20</span>
-                <button id="button_send" onclick="clickSend();">OK</button>
+                <span id='text_limit'>&nbsp;0/20</span><br>
+                <button id="button_send" onclick="clickSend();">OK</button></center>
         </div>
 
         <script src="firebase.js"></script>
